--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <link rel="shortcut icon" href="favicon.ico">
   <meta name="description" content="Teaching Resume Website">
-  <meta name="author" content="agonz761">
+  <meta name="author" content="9590-9794-0486">
 
   <title>Aylea Gonzalez- Teaching</title>
 
